--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "imports-loader": "^0.6.5",
     "js.clone": "0.0.3",
     "json-loader": "^0.5.4",
+    "proxy-middleware": "^0.15.0",
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "raw-loader": "^0.5.1",
@@ -55,6 +56,6 @@
     "mongoose": "^4.7.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.1",
-    "zone.js": "^0.7.4"
+    "zone.js": "0.7.4"
   }
 }
