--- a/package.json
+++ b/package.json
@@ -48,6 +48,12 @@
     "@angular/platform-browser": "~2.4.0",
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
+    "@types/bcrypt": "^1.0.0",
+    "@types/body-parser": "0.0.33",
+    "@types/express": "^4.0.35",
+    "@types/express-session": "0.0.32",
+    "@types/mongoose": "^4.7.5",
+    "@types/node": "^7.0.5",
     "bcrypt": "^1.0.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
