--- a/package.json
+++ b/package.json
@@ -54,12 +54,14 @@
     "@types/express-session": "0.0.32",
     "@types/mongoose": "^4.7.5",
     "@types/node": "^7.0.5",
+    "@types/nodemailer": "^1.3.32",
     "bcrypt": "^1.0.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.1",
+    "nodemailer": "^3.1.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.1",
     "zone.js": "0.7.4"
