--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/nodemailer": "^1.3.32",
     "bcrypt": "^1.0.0",
     "body-parser": "^1.15.2",
+    "core-js": "^2.4.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "mongodb": "^2.2.16",
