--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/express": "^4.0.35",
     "@types/express-session": "0.0.32",
     "@types/mongoose": "^4.7.5",
+    "@types/multer": "0.0.33",
     "@types/node": "^7.0.5",
     "@types/nodemailer": "^1.3.32",
     "bcrypt": "^1.0.0",
@@ -62,6 +63,7 @@
     "express-session": "^1.14.2",
     "mongodb": "^2.2.16",
     "mongoose": "^4.7.1",
+    "multer": "^1.3.0",
     "nodemailer": "^3.1.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.1",
